@@ -10,7 +10,10 @@ https://grails.org/
 
 ```
 
-```
+```sh
+./gradlew install
+grails run-app
+export GRADLE_OPTS="-Xmx2G -xms2G -XX:NewSize=512m -XX:MaxNewSize=512m -XX:MaxPermSize=1G"
 ```
 
 ```
